--- a/Algorythm.ipynb
+++ b/Algorythm.ipynb
@@ -620,7 +620,7 @@
         "      info = []\n",
         "      key = str(keys[i])\n",
         "      return_doc = data[str(key)][0]['title']\n",
-        "      url = 'https://' + str(data[str(key)][0]['link'])\n",
+        "      url = 'https:' + str(data[str(key)][0]['link'])\n",
         "      info.append(return_doc)\n",
         "      info.append(url)\n",
         "      string.append(info)\n",
